# Funky-Assembler

./: .gitignore  CMakeLists.txt  README.md  assembler.c  assembler.h  build_win.cmd  instructions.c  main.c  sonar-project.properties  string_functions.h  vm_arch.h
.github/workflows/: codeql.yml  sonar.yml
include/funkyas/: funkyas.h  vm_arch.h
playground/: io.funk  modtest.fasm  out.fasm  test.fasm  test.funk  test_map.fasm  test_map.funk  testfout.funk
src/: main.c  version.h
src/libfunkyas/: constants.c  constants.h  funkyas.c  instructions.c  instructions.h  string_functions.c  string_functions.h  vm_arch.h
